--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.datasource.password=root
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 
+#ESSAS DUAS PROPRIEDADES SERVEM PARA GERAR O DDL AO SUBIR A APLICAÇÃO. QUANDO USAR E CRIAR O DDL, COMENTÁ-LAS
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
+#ESSA PROPRIEDADE DEFINE AS PASTAS EM Q O FLYWAY VAI PROCURAR OS SCRIPTS
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
