--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 
@@ -20,3 +20,7 @@ spring.datasource.hikari.maximum-pool-size=5
 #SE N HOUVER ESSA PROPRIEDADE, O MINIMO SERÁ IGUAL AO MAXIMO
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=10000
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-ignored-properties=true
+
